playground/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil
  template:
    metadata:
      labels:
        app: wil
    spec:
      containers:
        - name: wil42/playground
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
