playground/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p3-service
spec:
  ports:
  - port: 8888
  selector:
    app: p3
