playground/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
    paths:
    - path: "/"
      pathType: Prefix
      backend:
        service:
          name: wil42-playground
          port:
            number: 7171
